policies/allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: dns
    namespace: test
spec:
    podSelector: {}
    egress:
        - to:
              - namespaceSelector: {}
          ports:
              - protocol: UDP
                port: 53
