policies/allow-external-empty-ingress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: allow-nginx-ingress
    namespace: test
spec:
    podSelector:
        matchLabels:
            app: nginx
    ingress:
        - {}
