policies/default-allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-all
    namespace: test
spec:
    podSelector: {}
    egress:
        - {}
    policyTypes:
        - Egress
