policies/default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: default-deny
    namespace: test
spec:
    podSelector: {}
    policyTypes:
        - Egress
