policies/deny-all-ingress-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: deny-all-ingress-egress
    namespace: test
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
