policies/egress-to-dns-and-internet-order2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-egress-to-dns-and-internet-ordering1
    namespace: test
spec:
    podSelector:
        matchLabels:
            app: test
    policyTypes:
        - Egress
    egress:
        - to:
              - ipBlock:
                    cidr: 0.0.0.0/0
                    except:
                        - 10.0.0.0/8
                        - 172.16.0.0/12
                        - 192.168.0.0/16
              - namespaceSelector:
                    matchLabels:
                        name: kube-system
                podSelector:
                    matchLabels:
                        k8s-app: kube-dns
