policies/pr.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
name: dns
namespace: test
spec:
podSelector: {}
egress:
- to:
- namespaceSelector: {}
ports:
- protocol: UDP
port: 53
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
name: allow-test-egress
namespace: test
spec:
podSelector:
matchLabels:
app: test
egress:
- {}
