policies/scenario-2.yaml
apiVersion: v1
kind: Pod
metadata:
    labels:
        app: nginx
    name: nginx
    namespace: test
spec:
    containers:
        - image: nginx
          imagePullPolicy: Always
          name: nginx
          ports:
              - containerPort: 80
                protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
    creationTimestamp: null
    labels:
        app: nginx
    name: nginx
    namespace: test
spec:
    ports:
        - port: 80
          protocol: TCP
          targetPort: 80
    selector:
        app: nginx
    sessionAffinity: None
    type: ClusterIP
status:
    loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: deny-all-ingress-egress
    namespace: test
spec:
    podSelector: {}
    policyTypes:
        - Ingress
        - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: dns
    namespace: test
spec:
    podSelector: {}
    egress:
        - to:
              - namespaceSelector: {}
          ports:
              - protocol: UDP
                port: 53
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: allow-nginx-ingress
    namespace: test
spec:
    podSelector:
        matchLabels:
            app: nginx
    ingress:
        - {}
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
    name: allow-test-egress
    namespace: test
spec:
    podSelector:
        matchLabels:
            app: test
    egress:
        - {}
